--- a/src/i18n/locale/cs.json
+++ b/src/i18n/locale/cs.json
@@ -39,8 +39,8 @@
   "components.Settings.SettingsAbout.totalrequests": "Celkový počet žádostí",
   "components.Settings.SettingsAbout.totalmedia": "Celkový počet médií",
   "components.Settings.SettingsAbout.timezone": "Časové pásmo",
-  "components.Settings.SettingsAbout.supportoverseerr": "Podpořte Overseerr",
-  "components.Settings.SettingsAbout.overseerrinformation": "Overseerr Informace",
+  "components.Settings.SettingsAbout.supportanimarr": "Podpořte Animarr",
+  "components.Settings.SettingsAbout.animarrinformation": "Animarr Informace",
   "components.Settings.SettingsAbout.githubdiscussions": "Diskuze na GitHubu",
   "components.Settings.SettingsAbout.Releases.viewchangelog": "Zobrazit seznam změn",
   "components.Settings.SettingsAbout.Releases.versionChangelog": "Seznam změn",
@@ -156,7 +156,7 @@
   "components.TvDetails.overview": "Přehled",
   "components.TvDetails.cast": "Obsazení",
   "components.TvDetails.anime": "Anime",
-  "components.StatusChacker.reloadOverseerr": "Znovu načíst",
+  "components.StatusChacker.reloadAnimarr": "Znovu načíst",
   "components.Setup.tip": "Tip",
   "components.Setup.setup": "Konfigurace",
   "components.Setup.finishing": "Dokončování…",
@@ -355,7 +355,7 @@
   "components.Login.validationpasswordrequired": "Musíte zadat heslo",
   "components.Login.validationemailrequired": "Musíte zadat platnou e-mailovou adresu",
   "components.Login.signinwithplex": "Použijte svůj Plex účet",
-  "components.Login.signinwithoverseerr": "Použijte svůj {applicationTitle} účet",
+  "components.Login.signinwithanimarr": "Použijte svůj {applicationTitle} účet",
   "components.Login.signinheader": "Pro pokračování se přihlaste",
   "components.Login.signingin": "Přihlašování…",
   "components.Login.signin": "Přihlásit se",
@@ -363,8 +363,8 @@
   "components.Login.loginerror": "Při pokusu o přihlášení se něco pokazilo.",
   "components.Login.forgotpassword": "Zapomenuté heslo?",
   "components.Login.email": "E-mailová adresa",
-  "components.Layout.VersionStatus.streamstable": "Overseerr Stabilní",
-  "components.Layout.VersionStatus.streamdevelop": "Overseerr Vývoj",
+  "components.Layout.VersionStatus.streamstable": "Animarr Stabilní",
+  "components.Layout.VersionStatus.streamdevelop": "Animarr Vývoj",
   "components.Layout.VersionStatus.outofdate": "Zastaralý",
   "components.Layout.UserDropdown.signout": "Odhlásit se",
   "components.Layout.UserDropdown.settings": "Nastavení",
