--- a/src/i18n/locale/en.json
+++ b/src/i18n/locale/en.json
@@ -116,8 +116,8 @@
   "components.Layout.UserDropdown.signout": "Sign Out",
   "components.Layout.VersionStatus.commitsbehind": "{commitsBehind} {commitsBehind, plural, one {commit} other {commits}} behind",
   "components.Layout.VersionStatus.outofdate": "Out of Date",
-  "components.Layout.VersionStatus.streamdevelop": "Overseerr Develop",
-  "components.Layout.VersionStatus.streamstable": "Overseerr Stable",
+  "components.Layout.VersionStatus.streamdevelop": "Animarr Develop",
+  "components.Layout.VersionStatus.streamstable": "Animarr Stable",
   "components.Login.email": "Email Address",
   "components.Login.forgotpassword": "Forgot Password?",
   "components.Login.loginerror": "Something went wrong while trying to sign in.",
@@ -125,7 +125,7 @@
   "components.Login.signin": "Sign In",
   "components.Login.signingin": "Signing In…",
   "components.Login.signinheader": "Sign in to continue",
-  "components.Login.signinwithoverseerr": "Use your {applicationTitle} account",
+  "components.Login.signinwithanimarr": "Use your {applicationTitle} account",
   "components.Login.signinwithplex": "Use your Plex account",
   "components.Login.validationemailrequired": "You must provide a valid email address",
   "components.Login.validationpasswordrequired": "You must provide a password",
@@ -411,7 +411,7 @@
   "components.Settings.Notifications.NotificationsPushbullet.validationAccessTokenRequired": "You must provide an access token",
   "components.Settings.Notifications.NotificationsPushbullet.validationTypes": "You must select at least one notification type",
   "components.Settings.Notifications.NotificationsPushover.accessToken": "Application API Token",
-  "components.Settings.Notifications.NotificationsPushover.accessTokenTip": "<ApplicationRegistrationLink>Register an application</ApplicationRegistrationLink> for use with Overseerr",
+  "components.Settings.Notifications.NotificationsPushover.accessTokenTip": "<ApplicationRegistrationLink>Register an application</ApplicationRegistrationLink> for use with Animarr",
   "components.Settings.Notifications.NotificationsPushover.agentenabled": "Enable Agent",
   "components.Settings.Notifications.NotificationsPushover.pushoversettingsfailed": "Pushover notification settings failed to save.",
   "components.Settings.Notifications.NotificationsPushover.pushoversettingssaved": "Pushover notification settings saved successfully!",
@@ -434,7 +434,7 @@
   "components.Settings.Notifications.NotificationsSlack.webhookUrl": "Webhook URL",
   "components.Settings.Notifications.NotificationsSlack.webhookUrlTip": "Create an <WebhookLink>Incoming Webhook</WebhookLink> integration",
   "components.Settings.Notifications.NotificationsWebPush.agentenabled": "Enable Agent",
-  "components.Settings.Notifications.NotificationsWebPush.httpsRequirement": "In order to receive web push notifications, Overseerr must be served over HTTPS.",
+  "components.Settings.Notifications.NotificationsWebPush.httpsRequirement": "In order to receive web push notifications, Animarr must be served over HTTPS.",
   "components.Settings.Notifications.NotificationsWebPush.toastWebPushTestFailed": "Web push test notification failed to send.",
   "components.Settings.Notifications.NotificationsWebPush.toastWebPushTestSending": "Sending web push test notification…",
   "components.Settings.Notifications.NotificationsWebPush.toastWebPushTestSuccess": "Web push test notification sent!",
@@ -460,7 +460,7 @@
   "components.Settings.Notifications.authPass": "SMTP Password",
   "components.Settings.Notifications.authUser": "SMTP Username",
   "components.Settings.Notifications.botAPI": "Bot Authorization Token",
-  "components.Settings.Notifications.botApiTip": "<CreateBotLink>Create a bot</CreateBotLink> for use with Overseerr",
+  "components.Settings.Notifications.botApiTip": "<CreateBotLink>Create a bot</CreateBotLink> for use with Animarr",
   "components.Settings.Notifications.botAvatarUrl": "Bot Avatar URL",
   "components.Settings.Notifications.botUsername": "Bot Username",
   "components.Settings.Notifications.botUsernameTip": "Allow users to also start a chat with your bot and configure their own notifications",
@@ -572,17 +572,17 @@
   "components.Settings.SettingsAbout.githubdiscussions": "GitHub Discussions",
   "components.Settings.SettingsAbout.helppaycoffee": "Help Pay for Coffee",
   "components.Settings.SettingsAbout.outofdate": "Out of Date",
-  "components.Settings.SettingsAbout.overseerrinformation": "About Overseerr",
+  "components.Settings.SettingsAbout.animarrinformation": "About Animarr",
   "components.Settings.SettingsAbout.preferredmethod": "Preferred",
-  "components.Settings.SettingsAbout.runningDevelop": "You are running the <code>develop</code> branch of Overseerr, which is only recommended for those contributing to development or assisting with bleeding-edge testing.",
-  "components.Settings.SettingsAbout.supportoverseerr": "Support Overseerr",
+  "components.Settings.SettingsAbout.runningDevelop": "You are running the <code>develop</code> branch of Animarr, which is only recommended for those contributing to development or assisting with bleeding-edge testing.",
+  "components.Settings.SettingsAbout.supportanimarr": "Support Animarr",
   "components.Settings.SettingsAbout.timezone": "Time Zone",
   "components.Settings.SettingsAbout.totalmedia": "Total Media",
   "components.Settings.SettingsAbout.totalrequests": "Total Requests",
   "components.Settings.SettingsAbout.uptodate": "Up to Date",
   "components.Settings.SettingsAbout.version": "Version",
   "components.Settings.SettingsJobsCache.cache": "Cache",
-  "components.Settings.SettingsJobsCache.cacheDescription": "Overseerr caches requests to external API endpoints to optimize performance and avoid making unnecessary API calls.",
+  "components.Settings.SettingsJobsCache.cacheDescription": "Animarr caches requests to external API endpoints to optimize performance and avoid making unnecessary API calls.",
   "components.Settings.SettingsJobsCache.cacheflushed": "{cachename} cache flushed.",
   "components.Settings.SettingsJobsCache.cachehits": "Hits",
   "components.Settings.SettingsJobsCache.cachekeys": "Total Keys",
@@ -604,7 +604,7 @@
   "components.Settings.SettingsJobsCache.jobcancelled": "{jobname} canceled.",
   "components.Settings.SettingsJobsCache.jobname": "Job Name",
   "components.Settings.SettingsJobsCache.jobs": "Jobs",
-  "components.Settings.SettingsJobsCache.jobsDescription": "Overseerr performs certain maintenance tasks as regularly-scheduled jobs, but they can also be manually triggered below. Manually running a job will not alter its schedule.",
+  "components.Settings.SettingsJobsCache.jobsDescription": "Animarr performs certain maintenance tasks as regularly-scheduled jobs, but they can also be manually triggered below. Manually running a job will not alter its schedule.",
   "components.Settings.SettingsJobsCache.jobsandcache": "Jobs & Cache",
   "components.Settings.SettingsJobsCache.jobstarted": "{jobname} started.",
   "components.Settings.SettingsJobsCache.jobtype": "Type",
@@ -627,7 +627,7 @@
   "components.Settings.SettingsLogs.level": "Severity",
   "components.Settings.SettingsLogs.logDetails": "Log Details",
   "components.Settings.SettingsLogs.logs": "Logs",
-  "components.Settings.SettingsLogs.logsDescription": "You can also view these logs directly via <code>stdout</code>, or in <code>{appDataPath}/logs/overseerr.log</code>.",
+  "components.Settings.SettingsLogs.logsDescription": "You can also view these logs directly via <code>stdout</code>, or in <code>{appDataPath}/logs/animarr.log</code>.",
   "components.Settings.SettingsLogs.message": "Message",
   "components.Settings.SettingsLogs.pauseLogs": "Pause",
   "components.Settings.SettingsLogs.resumeLogs": "Resume",
@@ -711,7 +711,7 @@
   "components.Settings.copied": "Copied API key to clipboard.",
   "components.Settings.csrfProtection": "Enable CSRF Protection",
   "components.Settings.csrfProtectionHoverTip": "Do NOT enable this setting unless you understand what you are doing!",
-  "components.Settings.csrfProtectionTip": "Set external API access to read-only (requires HTTPS, and Overseerr must be reloaded for changes to take effect)",
+  "components.Settings.csrfProtectionTip": "Set external API access to read-only (requires HTTPS, and Animarr must be reloaded for changes to take effect)",
   "components.Settings.currentlibrary": "Current Library: {name}",
   "components.Settings.default": "Default",
   "components.Settings.default4k": "Default 4K",
@@ -721,14 +721,14 @@
   "components.Settings.externalUrl": "External URL",
   "components.Settings.general": "General",
   "components.Settings.generalsettings": "General Settings",
-  "components.Settings.generalsettingsDescription": "Configure global and default settings for Overseerr.",
+  "components.Settings.generalsettingsDescription": "Configure global and default settings for Animarr.",
   "components.Settings.hideAvailable": "Hide Available Media",
   "components.Settings.hostname": "Hostname or IP Address",
   "components.Settings.is4k": "4K",
   "components.Settings.librariesRemaining": "Libraries Remaining: {count}",
   "components.Settings.locale": "Display Language",
   "components.Settings.manualscan": "Manual Library Scan",
-  "components.Settings.manualscanDescription": "Normally, this will only be run once every 24 hours. Overseerr will check your Plex server's recently added more aggressively. If this is your first time configuring Plex, a one-time full manual library scan is recommended!",
+  "components.Settings.manualscanDescription": "Normally, this will only be run once every 24 hours. Animarr will check your Plex server's recently added more aggressively. If this is your first time configuring Plex, a one-time full manual library scan is recommended!",
   "components.Settings.mediaTypeMovie": "movie",
   "components.Settings.mediaTypeSeries": "series",
   "components.Settings.menuAbout": "About",
@@ -751,9 +751,9 @@
   "components.Settings.partialRequestsEnabled": "Allow Partial Series Requests",
   "components.Settings.plex": "Plex",
   "components.Settings.plexlibraries": "Plex Libraries",
-  "components.Settings.plexlibrariesDescription": "The libraries Overseerr scans for titles. Set up and save your Plex connection settings, then click the button below if no libraries are listed.",
+  "components.Settings.plexlibrariesDescription": "The libraries Animarr scans for titles. Set up and save your Plex connection settings, then click the button below if no libraries are listed.",
   "components.Settings.plexsettings": "Plex Settings",
-  "components.Settings.plexsettingsDescription": "Configure the settings for your Plex server. Overseerr scans your Plex libraries to determine content availability.",
+  "components.Settings.plexsettingsDescription": "Configure the settings for your Plex server. Animarr scans your Plex libraries to determine content availability.",
   "components.Settings.port": "Port",
   "components.Settings.radarrsettings": "Radarr Settings",
   "components.Settings.region": "Discover Region",
@@ -775,7 +775,7 @@
   "components.Settings.startscan": "Start Scan",
   "components.Settings.tautulliApiKey": "API Key",
   "components.Settings.tautulliSettings": "Tautulli Settings",
-  "components.Settings.tautulliSettingsDescription": "Optionally configure the settings for your Tautulli server. Overseerr fetches watch history data for your Plex media from Tautulli.",
+  "components.Settings.tautulliSettingsDescription": "Optionally configure the settings for your Tautulli server. Animarr fetches watch history data for your Plex media from Tautulli.",
   "components.Settings.toastApiKeyFailure": "Something went wrong while generating a new API key.",
   "components.Settings.toastApiKeySuccess": "New API key generated successfully!",
   "components.Settings.toastPlexConnecting": "Attempting to connect to Plex…",
@@ -789,7 +789,7 @@
   "components.Settings.toastTautulliSettingsFailure": "Something went wrong while saving Tautulli settings.",
   "components.Settings.toastTautulliSettingsSuccess": "Tautulli settings saved successfully!",
   "components.Settings.trustProxy": "Enable Proxy Support",
-  "components.Settings.trustProxyTip": "Allow Overseerr to correctly register client IP addresses behind a proxy (Overseerr must be reloaded for changes to take effect)",
+  "components.Settings.trustProxyTip": "Allow Animarr to correctly register client IP addresses behind a proxy (Animarr must be reloaded for changes to take effect)",
   "components.Settings.urlBase": "URL Base",
   "components.Settings.validationApiKey": "You must provide an API key",
   "components.Settings.validationApplicationTitle": "You must provide an application title",
@@ -815,12 +815,12 @@
   "components.Setup.setup": "Setup",
   "components.Setup.signinMessage": "Get started by signing in with your Plex account",
   "components.Setup.tip": "Tip",
-  "components.Setup.welcome": "Welcome to Overseerr",
+  "components.Setup.welcome": "Welcome to Animarr",
   "components.StatusBadge.status": "{status}",
   "components.StatusBadge.status4k": "4K {status}",
-  "components.StatusChacker.newversionDescription": "Overseerr has been updated! Please click the button below to reload the page.",
+  "components.StatusChacker.newversionDescription": "Animarr has been updated! Please click the button below to reload the page.",
   "components.StatusChacker.newversionavailable": "Application Update",
-  "components.StatusChacker.reloadOverseerr": "Reload",
+  "components.StatusChacker.reloadAnimarr": "Reload",
   "components.TvDetails.TvCast.fullseriescast": "Full Series Cast",
   "components.TvDetails.TvCrew.fullseriescrew": "Full Series Crew",
   "components.TvDetails.anime": "Anime",
