--- a/src/i18n/locale/es.json
+++ b/src/i18n/locale/es.json
@@ -18,7 +18,7 @@
   "components.Settings.SettingsAbout.version": "Versión",
   "components.Settings.SettingsAbout.totalrequests": "Peticiones Totales",
   "components.Settings.SettingsAbout.totalmedia": "Contenido Total",
-  "components.Settings.SettingsAbout.overseerrinformation": "Sobre Overseerr",
+  "components.Settings.SettingsAbout.animarrinformation": "Sobre Animarr",
   "components.Settings.SettingsAbout.githubdiscussions": "Discursiones en GitHub",
   "components.Settings.SettingsAbout.gettingsupport": "Soporte",
   "components.Settings.RadarrModal.validationRootFolderRequired": "Debes seleccionar una carpeta raíz",
@@ -145,7 +145,7 @@
   "components.TvDetails.originallanguage": "Idioma original",
   "components.TvDetails.cast": "Reparto",
   "components.TvDetails.TvCast.fullseriescast": "Reparto completo de la serie",
-  "components.Setup.welcome": "Bienvenido a Overseerr",
+  "components.Setup.welcome": "Bienvenido a Animarr",
   "components.Setup.signinMessage": "Comience iniciando sesión con su cuenta de Plex",
   "components.Setup.loginwithplex": "Iniciar sesión con Plex",
   "components.Setup.finishing": "Finalizando…",
@@ -160,9 +160,9 @@
   "components.Settings.sonarrsettings": "Ajustes de Sonarr",
   "components.Settings.radarrsettings": "Ajustes de Radarr",
   "components.Settings.port": "Puerto",
-  "components.Settings.plexsettingsDescription": "Configure los ajustes de su servidor Plex. Overseerr escanea tu biblioteca para determinar la disponibilidad de contenidos.",
+  "components.Settings.plexsettingsDescription": "Configure los ajustes de su servidor Plex. Animarr escanea tu biblioteca para determinar la disponibilidad de contenidos.",
   "components.Settings.plexsettings": "Ajustes de Plex",
-  "components.Settings.plexlibrariesDescription": "Las bibliotecas en las que Overseerr escanea para buscar títulos. Configure y guarde la configuración de conexión Plex, y después haga clic en el botón de abajo si no aparece ninguna.",
+  "components.Settings.plexlibrariesDescription": "Las bibliotecas en las que Animarr escanea para buscar títulos. Configure y guarde la configuración de conexión Plex, y después haga clic en el botón de abajo si no aparece ninguna.",
   "components.Settings.plexlibraries": "Bibliotecas Plex",
   "components.Settings.notrunning": "Sin ejecutarse",
   "components.Settings.notificationsettings": "Configuración de notificaciones",
@@ -172,11 +172,11 @@
   "components.Settings.menuJobs": "Tareas y Caché",
   "components.Settings.menuGeneralSettings": "General",
   "components.Settings.menuAbout": "Acerca de",
-  "components.Settings.manualscanDescription": "Normalmente, esto sólo se ejecutará una vez cada 24 horas. Overseerr comprobará de forma más agresiva los añadidos recientemente de su servidor Plex. ¡Si es la primera vez que configura Plex, se recomienda un escaneo manual completo de la biblioteca!",
+  "components.Settings.manualscanDescription": "Normalmente, esto sólo se ejecutará una vez cada 24 horas. Animarr comprobará de forma más agresiva los añadidos recientemente de su servidor Plex. ¡Si es la primera vez que configura Plex, se recomienda un escaneo manual completo de la biblioteca!",
   "components.Settings.manualscan": "Escaneo Manual de Biblioteca",
   "components.Settings.librariesRemaining": "Bibliotecas restantes: {count}",
   "components.Settings.hostname": "Nombre de host o Dirección IP",
-  "components.Settings.generalsettingsDescription": "Configuración global y ajustes por defecto de Overseerr.",
+  "components.Settings.generalsettingsDescription": "Configuración global y ajustes por defecto de Animarr.",
   "components.Settings.generalsettings": "Configuración general",
   "components.Settings.deleteserverconfirm": "¿Está seguro de que desea eliminar este servidor?",
   "components.Settings.default4k": "4K predeterminado",
@@ -212,7 +212,7 @@
   "components.Settings.SonarrModal.animerootfolder": "Carpeta raíz de anime",
   "components.Settings.SonarrModal.animequalityprofile": "Perfil de calidad de anime",
   "components.Settings.SettingsAbout.timezone": "Zona horaria",
-  "components.Settings.SettingsAbout.supportoverseerr": "Apoya a Overseerr",
+  "components.Settings.SettingsAbout.supportanimarr": "Apoya a Animarr",
   "components.Settings.SettingsAbout.helppaycoffee": "Ayúdame invitándome a un café",
   "components.Settings.SettingsAbout.Releases.viewongithub": "Ver en GitHub",
   "components.Settings.SettingsAbout.Releases.viewchangelog": "Ver registro de cambios",
@@ -246,9 +246,9 @@
   "components.RequestList.RequestItem.failedretry": "Algo salió mal al reintentar la solicitud.",
   "components.MovieDetails.watchtrailer": "Ver Trailer",
   "components.NotificationTypeSelector.mediarequestedDescription": "Envía una notificación cuando se solicita nuevo contenido que requiere ser aprobado.",
-  "components.StatusChacker.reloadOverseerr": "Recargar",
+  "components.StatusChacker.reloadAnimarr": "Recargar",
   "components.StatusChacker.newversionavailable": "Actualización de Aplicación",
-  "components.StatusChacker.newversionDescription": "¡Overseerr se ha actualizado!Haga clic en el botón de abajo para volver a cargar la aplicación.",
+  "components.StatusChacker.newversionDescription": "¡Animarr se ha actualizado!Haga clic en el botón de abajo para volver a cargar la aplicación.",
   "components.Settings.SettingsAbout.documentation": "Documentación",
   "components.Settings.Notifications.validationChatIdRequired": "Debes proporcionar un ID de chat válido",
   "components.Settings.Notifications.validationBotAPIRequired": "Debes proporcionar un token de autorización del bot",
@@ -328,7 +328,7 @@
   "components.MediaSlider.ShowMoreCard.seemore": "Ver más",
   "components.Login.validationpasswordrequired": "Se requiere contraseña",
   "components.Login.validationemailrequired": "Debes indicar una dirección de email válida",
-  "components.Login.signinwithoverseerr": "Usa tu cuenta de {applicationTitle}",
+  "components.Login.signinwithanimarr": "Usa tu cuenta de {applicationTitle}",
   "components.Login.password": "Contraseña",
   "components.Login.loginerror": "Algo salió mal al intentar iniciar sesión.",
   "components.Login.email": "Dirección de correo electrónico",
@@ -440,7 +440,7 @@
   "components.Settings.SettingsJobsCache.cachekeys": "Claves Totales",
   "components.Settings.SettingsJobsCache.cachehits": "Consultas",
   "components.Settings.SettingsJobsCache.cacheflushed": "{cachename} caché limpiada.",
-  "components.Settings.SettingsJobsCache.cacheDescription": "Overseer cachea peticiones a APIs externas para optimizar el rendimiento y evitar llamadas innecesarias a esas APIs.",
+  "components.Settings.SettingsJobsCache.cacheDescription": "Animarr cachea peticiones a APIs externas para optimizar el rendimiento y evitar llamadas innecesarias a esas APIs.",
   "components.Settings.SettingsJobsCache.cache": "Caché",
   "components.Settings.SettingsAbout.preferredmethod": "Preferida",
   "components.Settings.RadarrModal.validationBaseUrlTrailingSlash": "URL Base No debe tener una barra al final",
@@ -516,7 +516,7 @@
   "components.Settings.validationApplicationUrlTrailingSlash": "La URL no puede acabar con una barra",
   "components.Settings.validationApplicationUrl": "Debes indicar una URL válida",
   "components.Settings.validationApplicationTitle": "Debes indicar un título de aplicación",
-  "components.Settings.trustProxyTip": "Permite a Overserr registrar correctamente la IP del cliente detrás de un Proxy (Overseer debe recargarse para que los cambios surtan efecto)",
+  "components.Settings.trustProxyTip": "Permite a Overserr registrar correctamente la IP del cliente detrás de un Proxy (Animarr debe recargarse para que los cambios surtan efecto)",
   "components.Settings.trustProxy": "Habilitar soporte Proxy",
   "components.Settings.toastPlexRefreshSuccess": "¡Recibida la lista de servidores de Plex con éxito!",
   "components.Settings.toastPlexRefreshFailure": "Fallo al obtener la lista de servidores de Plex.",
@@ -541,7 +541,7 @@
   "components.Settings.notificationAgentSettingsDescription": "Configura y habilita los agentes de notificaciones.",
   "components.Settings.menuUsers": "Usuarios",
   "components.Settings.email": "Email",
-  "components.Settings.csrfProtectionTip": "Asigna acceso a una API externa en modo solo lectura (requiere HTTPS y debe recargarse Overseer para poder aplicar los cambios)",
+  "components.Settings.csrfProtectionTip": "Asigna acceso a una API externa en modo solo lectura (requiere HTTPS y debe recargarse Animarr para poder aplicar los cambios)",
   "components.Settings.csrfProtectionHoverTip": "¡NO habilitar esta opción a menos que seas consciente de lo que estás haciendo!",
   "components.Settings.csrfProtection": "Habilitar Protección CSRF",
   "components.Settings.applicationTitle": "Título de la Aplicación",
@@ -569,7 +569,7 @@
   "components.Settings.SettingsLogs.pauseLogs": "Pausar",
   "components.Settings.SettingsLogs.resumeLogs": "Reanudar",
   "components.Settings.SettingsLogs.message": "Mensaje",
-  "components.Settings.SettingsLogs.logsDescription": "Puede ver estos logs directamente via <code>stdout</code> o en <code>{appDataPath}/logs/overseerr.log</code>.",
+  "components.Settings.SettingsLogs.logsDescription": "Puede ver estos logs directamente via <code>stdout</code> o en <code>{appDataPath}/logs/animarr.log</code>.",
   "components.Settings.SettingsLogs.logs": "Logs",
   "components.Settings.SettingsLogs.level": "Severidad",
   "components.Settings.SettingsLogs.label": "Etiqueta",
@@ -744,8 +744,8 @@
   "components.RequestCard.mediaerror": "El título asociado a esta solicitud ya no está disponible.",
   "components.RequestCard.deleterequest": "Borrar Solicitud",
   "components.NotificationTypeSelector.notificationTypes": "Tipos de Notificación",
-  "components.Layout.VersionStatus.streamstable": "Overseer (Estable)",
-  "components.Layout.VersionStatus.streamdevelop": "Overseer (Desarrollo)",
+  "components.Layout.VersionStatus.streamstable": "Animarr (Estable)",
+  "components.Layout.VersionStatus.streamdevelop": "Animarr (Desarrollo)",
   "components.Layout.VersionStatus.outofdate": "Desactualizado",
   "components.Discover.noRequests": "Sin solicitudes.",
   "components.UserList.autogeneratepasswordTip": "Envía por email una contraseña al usuario generada por el servidor",
@@ -823,7 +823,7 @@
   "components.Settings.Notifications.encryptionOpportunisticTls": "Usa siempre STARTTLS",
   "components.TvDetails.streamingproviders": "Emisión Actual en",
   "components.UserProfile.UserSettings.UserGeneralSettings.languageDefault": "{{Language}} por defecto",
-  "components.Settings.Notifications.NotificationsWebPush.httpsRequirement": "Para recibir notificaciones web push, Overseerr debe servirse mediante HTTPS.",
+  "components.Settings.Notifications.NotificationsWebPush.httpsRequirement": "Para recibir notificaciones web push, Animarr debe servirse mediante HTTPS.",
   "components.Settings.Notifications.NotificationsWebhook.validationTypes": "Debes seleccionar, al menos, un tipo de notificación",
   "components.Settings.Notifications.validationTypes": "Debes seleccionar, al menos, un tipo de notificación",
   "components.Settings.SettingsUsers.localLoginTip": "Permite a los usuarios registrarse consumo email y password, en lugar de la OAuth de Plex",
@@ -835,7 +835,7 @@
   "components.Settings.Notifications.encryptionNone": "Ninguna",
   "components.Settings.Notifications.NotificationsLunaSea.webhookUrlTip": "Tu <LunaSeaLink>URL del webhook de notificación</LunaSeaLink> basado en tu usuario o dispositivo",
   "components.Settings.Notifications.NotificationsPushbullet.accessTokenTip": "Crea un token desde tu <PushbulletSettingsLink>Opciones de Cuenta</PushbulletSettingsLink>",
-  "components.Settings.Notifications.NotificationsPushover.accessTokenTip": "<ApplicationRegistrationLink>Registrar una aplicación</ApplicationRegistrationLink> para su uso con Overseerr",
+  "components.Settings.Notifications.NotificationsPushover.accessTokenTip": "<ApplicationRegistrationLink>Registrar una aplicación</ApplicationRegistrationLink> para su uso con Animarr",
   "components.Settings.Notifications.NotificationsPushover.userTokenTip": "Tu <UsersGroupsLink>identificador de usuario o grupo</UsersGroupsLink> de 30 caracteres",
   "components.Settings.Notifications.NotificationsPushbullet.validationTypes": "Debes seleccionar, al menos, un tipo de notificación",
   "components.Settings.Notifications.NotificationsPushover.validationTypes": "Debes seleccionar, al menos, un tipo de notificación",
@@ -851,11 +851,11 @@
   "components.Settings.webAppUrlTip": "Dirige a los usuarios, opcionalmente, a la web app en tu servidor, en lugar de la app alojada en Plex",
   "components.QuotaSelector.days": "{count, plural, one {día} other {días}}",
   "components.QuotaSelector.tvRequests": "{quotaLimit} <quotaUnits>{temporadas} per {quotaDays} {días}</quotaUnits>",
-  "components.Settings.Notifications.botApiTip": "<CreateBotLink>Crea un bot</CreateBotLink> para usar con Overseerr",
+  "components.Settings.Notifications.botApiTip": "<CreateBotLink>Crea un bot</CreateBotLink> para usar con Animarr",
   "components.Settings.Notifications.encryptionTip": "Normalmente, TLS Implícito usa el puerto 465 y STARTTLS usa el puerto 587",
   "components.UserList.localLoginDisabled": "El ajuste para <strong>Habilitar el Inicio de Sesión Local</strong> está actualmente deshabilitado.",
   "components.Settings.SettingsUsers.defaultPermissionsTip": "Permisos iniciales asignados a nuevos usuarios",
-  "components.Settings.SettingsAbout.runningDevelop": "Estás utilizando la rama de <code>develop</code> de Overseerr, la cual solo se recomienda para aquellos que contribuyen al desarrollo o al soporte de las pruebas de nuevos desarrollos.",
+  "components.Settings.SettingsAbout.runningDevelop": "Estás utilizando la rama de <code>develop</code> de Animarr, la cual solo se recomienda para aquellos que contribuyen al desarrollo o al soporte de las pruebas de nuevos desarrollos.",
   "components.StatusBadge.status": "{status}",
   "components.Settings.SettingsJobsCache.editJobScheduleSelectorMinutes": "Cada {jobScheduleMinutes, plural, one {minuto} other {{jobScheduleMinutes} minutos}}",
   "components.Settings.SettingsJobsCache.editJobScheduleSelectorHours": "Cada {jobScheduleHours, plural, one {hora} other {{jobScheduleHours} horas}}",
