--- a/src/i18n/locale/hu.json
+++ b/src/i18n/locale/hu.json
@@ -26,9 +26,9 @@
   "components.PersonDetails.crewmember": "Stáb",
   "components.PersonDetails.ascharacter": "mint {character}",
   "components.PersonDetails.appearsin": "Szerepel a következőkben",
-  "components.PermissionEdit.usersDescription": "Engedélyt ad az Overseerr-nek felhasználók kezelésére. Az ezzel az engedéllyel rendelkező felhasználók nem módosíthatják a rendszergazdai jogosultsággal rendelkező felhasználókat, és nem adhatják meg a jogosultságot más felhasználónak.",
+  "components.PermissionEdit.usersDescription": "Engedélyt ad az Animarr-nek felhasználók kezelésére. Az ezzel az engedéllyel rendelkező felhasználók nem módosíthatják a rendszergazdai jogosultsággal rendelkező felhasználókat, és nem adhatják meg a jogosultságot más felhasználónak.",
   "components.PermissionEdit.users": "Felhasználók kezelése",
-  "components.PermissionEdit.settingsDescription": "Engedélyt ad az Overseerr-nek összes beállításának módosítására. A felhasználónak rendelkeznie kell ezzel az engedéllyel ahhoz, hogy másoknak megadja.",
+  "components.PermissionEdit.settingsDescription": "Engedélyt ad az Animarr-nek összes beállításának módosítására. A felhasználónak rendelkeznie kell ezzel az engedéllyel ahhoz, hogy másoknak megadja.",
   "components.PermissionEdit.settings": "Beállítások kezelése",
   "components.PermissionEdit.requestDescription": "Engedélyt ad filmek és sorozatok kérésére.",
   "components.PermissionEdit.request4kTvDescription": "Engedélyt ad 4K-s sorozatok kérésére.",
@@ -38,7 +38,7 @@
   "components.PermissionEdit.request4kDescription": "Engedélyt ad 4K-s filmek és sorozatok kérésére.",
   "components.PermissionEdit.request4k": "Kérés 4K-ban",
   "components.PermissionEdit.request": "Kérés",
-  "components.PermissionEdit.managerequestsDescription": "Engedélyt ad az Overseerr-nek a kérések kezelésére. Ez magában foglalja a kérelmek jóváhagyását és elutasítását.",
+  "components.PermissionEdit.managerequestsDescription": "Engedélyt ad az Animarr-nek a kérések kezelésére. Ez magában foglalja a kérelmek jóváhagyását és elutasítását.",
   "components.PermissionEdit.managerequests": "Kérések kezelése",
   "components.PermissionEdit.autoapproveMoviesDescription": "Automatikusan jóváhagyja a felhasználó minden film kérését.",
   "components.PermissionEdit.autoapproveSeriesDescription": "Automatikusan jóváhagyja a felhasználó minden sorozat kérését.",
@@ -69,7 +69,7 @@
   "components.Login.validationpasswordrequired": "Meg kell adnia egy jelszót",
   "components.Login.validationemailrequired": "Érvényes email címet kell megadnod",
   "components.Login.signinwithplex": "Használd a Plex fiókat",
-  "components.Login.signinwithoverseerr": "Bejelentkezés {applicationTitle} fiókkal",
+  "components.Login.signinwithanimarr": "Bejelentkezés {applicationTitle} fiókkal",
   "components.Login.signinheader": "Jelentkezz be a folytatáshoz",
   "components.Login.signingin": "Bejelentkezés…",
   "components.Login.signin": "Bejelentkezés",
@@ -193,11 +193,11 @@
   "components.TvDetails.anime": "Anime",
   "components.TvDetails.TvCrew.fullseriescrew": "Sorozat teljes stábja",
   "components.TvDetails.TvCast.fullseriescast": "Sorozat teljes szereposztása",
-  "components.StatusChacker.reloadOverseerr": "Újratöltés",
+  "components.StatusChacker.reloadAnimarr": "Újratöltés",
   "components.StatusChacker.newversionavailable": "Alkalmazásfrissítés",
-  "components.StatusChacker.newversionDescription": "Az Overseerr frissült! Az oldal újratöltéséhez kattintson az alábbi gombra.",
+  "components.StatusChacker.newversionDescription": "Az Animarr frissült! Az oldal újratöltéséhez kattintson az alábbi gombra.",
   "components.StatusBadge.status4k": "4K {status}",
-  "components.Setup.welcome": "Üdv az Overseerr-ben",
+  "components.Setup.welcome": "Üdv az Animarr-ben",
   "components.Setup.signinMessage": "Kezdésnek lépj be a Plex fiókoddal",
   "components.Setup.loginwithplex": "Bejelentkezés Plex fiókkal",
   "components.Setup.finishing": "Befejezés…",
@@ -313,7 +313,7 @@
   "components.Settings.validationApplicationUrlTrailingSlash": "Az URL-nek nem lehet vége perjellel",
   "components.Settings.validationApplicationUrl": "Érvényes URL-t kell megadnia",
   "components.Settings.validationApplicationTitle": "Meg kell adnia egy alkalmazás címet",
-  "components.Settings.trustProxyTip": "Lehetővé teszi az Overseerr számára, hogy helyesen regisztrálja az ügyfelek IP-címeit proxy mögött (az Overseerr-t újra kell tölteni a változások érvénybe lépéséhez)",
+  "components.Settings.trustProxyTip": "Lehetővé teszi az Animarr számára, hogy helyesen regisztrálja az ügyfelek IP-címeit proxy mögött (az Animarr-t újra kell tölteni a változások érvénybe lépéséhez)",
   "components.Settings.trustProxy": "Proxy-támogatás engedélyezése",
   "components.Settings.toastSettingsSuccess": "A beállítások sikeresen mentve!",
   "components.Settings.toastSettingsFailure": "Valami elromlott a beállítások mentése közben.",
@@ -344,9 +344,9 @@
   "components.Settings.region": "Fedezzen fel régiót",
   "components.Settings.radarrsettings": "Radarr beállítások",
   "components.Settings.port": "Port",
-  "components.Settings.plexsettingsDescription": "Konfigurálja a Plex szerver beállításait. Az Overseerr átvizsgálja a Plex könyvtárakat a tartalom elérhetőségének meghatározása érdekében.",
+  "components.Settings.plexsettingsDescription": "Konfigurálja a Plex szerver beállításait. Az Animarr átvizsgálja a Plex könyvtárakat a tartalom elérhetőségének meghatározása érdekében.",
   "components.Settings.plexsettings": "Plex beállítások",
-  "components.Settings.plexlibrariesDescription": "Az Overseerr könyvtár címeket keres. Állítsa be és mentse el a Plex kapcsolati beállításokat, majd kattintson az alábbi gombra, ha nincsenek könyvtárak.",
+  "components.Settings.plexlibrariesDescription": "Az Animarr könyvtár címeket keres. Állítsa be és mentse el a Plex kapcsolati beállításokat, majd kattintson az alábbi gombra, ha nincsenek könyvtárak.",
   "components.Settings.plexlibraries": "Plex könyvtárak",
   "components.Settings.plex": "Plex",
   "components.Settings.partialRequestsEnabled": "Részleges sorozatkérések engedélyezése",
@@ -369,13 +369,13 @@
   "components.Settings.menuAbout": "Az oldalról",
   "components.Settings.mediaTypeSeries": "sorozat",
   "components.Settings.mediaTypeMovie": "film",
-  "components.Settings.manualscanDescription": "Normális esetben ez csak 24 óránként egyszer fut le. Az Overseerr agresszívebben ellenőrzi a Plex szerver \"nemrégiben hozzáadottakat\" könyvtárat. Ha ez az első alkalom a Plex konfigurálásában, egyszeri teljes kézi könyvtárellenőrzés ajánlott!",
+  "components.Settings.manualscanDescription": "Normális esetben ez csak 24 óránként egyszer fut le. Az Animarr agresszívebben ellenőrzi a Plex szerver \"nemrégiben hozzáadottakat\" könyvtárat. Ha ez az első alkalom a Plex konfigurálásában, egyszeri teljes kézi könyvtárellenőrzés ajánlott!",
   "components.Settings.manualscan": "Kézi könyvtári beolvasás",
   "components.Settings.locale": "Megjelenítési nyelv",
   "components.Settings.librariesRemaining": "Fennmaradó könyvtárak: {count}",
   "components.Settings.is4k": "4K",
   "components.Settings.hideAvailable": "Elérhető média elrejtése",
-  "components.Settings.generalsettingsDescription": "Az Overseerr globális és alapértelmezett beállításainak konfigurálása.",
+  "components.Settings.generalsettingsDescription": "Az Animarr globális és alapértelmezett beállításainak konfigurálása.",
   "components.Settings.generalsettings": "Általános beállítások",
   "components.Settings.general": "Általános",
   "components.Settings.enablessl": "Használjon SSL-t",
@@ -384,7 +384,7 @@
   "components.Settings.default4k": "Alapértelmezett 4K",
   "components.Settings.default": "Alapértelmezett",
   "components.Settings.currentlibrary": "Jelenlegi könyvtár: {name}",
-  "components.Settings.csrfProtectionTip": "Külső API-hozzáférés beállítása csak olvashatóra (HTTPS szükséges, és az Overseerr-t újra kell tölteni a módosítások érvénybe lépéséhez)",
+  "components.Settings.csrfProtectionTip": "Külső API-hozzáférés beállítása csak olvashatóra (HTTPS szükséges, és az Animarr-t újra kell tölteni a módosítások érvénybe lépéséhez)",
   "components.Settings.csrfProtectionHoverTip": "NE engedélyezze ezt a beállítást, csak ha megérti, mit csinál!",
   "components.Settings.csrfProtection": "Engedélyezze a CSRF-védelmet",
   "components.Settings.copied": "API-kulcs másolva a vágólapra.",
@@ -435,7 +435,7 @@
   "components.Settings.SettingsLogs.resumeLogs": "Folytatás",
   "components.Settings.SettingsLogs.pauseLogs": "Szünet",
   "components.Settings.SettingsLogs.message": "Üzenet",
-  "components.Settings.SettingsLogs.logsDescription": "Ezeket a naplókat közvetlenül a <code>stdout</code>-on keresztül vagy a <code>{appDataPath}/logs/overseerr.log</code>-ben is megtekintheti.",
+  "components.Settings.SettingsLogs.logsDescription": "Ezeket a naplókat közvetlenül a <code>stdout</code>-on keresztül vagy a <code>{appDataPath}/logs/animarr.log</code>-ben is megtekintheti.",
   "components.Settings.SettingsLogs.logs": "Naplók",
   "components.Settings.SettingsLogs.logDetails": "Napló részletei",
   "components.Settings.SettingsLogs.level": "Súlyosság",
@@ -458,7 +458,7 @@
   "components.Settings.SettingsJobsCache.jobtype": "Típus",
   "components.Settings.SettingsJobsCache.jobstarted": "{jobname} elindult.",
   "components.Settings.SettingsJobsCache.jobsandcache": "Feladatok és gyorsítótár",
-  "components.Settings.SettingsJobsCache.jobsDescription": "Az Overseerr bizonyos karbantartási feladatokat rendszeresen ütemezett munkákként végez, de ezeket az alábbiakban manuálisan is elindíthatja. Egy feladat kézi futtatása nem változtatja meg annak ütemezését.",
+  "components.Settings.SettingsJobsCache.jobsDescription": "Az Animarr bizonyos karbantartási feladatokat rendszeresen ütemezett munkákként végez, de ezeket az alábbiakban manuálisan is elindíthatja. Egy feladat kézi futtatása nem változtatja meg annak ütemezését.",
   "components.Settings.SettingsJobsCache.jobs": "Feladatok",
   "components.Settings.SettingsJobsCache.jobname": "Feladat neve",
   "components.Settings.SettingsJobsCache.jobcancelled": "{jobname} törölve.",
@@ -474,16 +474,16 @@
   "components.Settings.SettingsJobsCache.cachekeys": "Összes \"api lékérés\"",
   "components.Settings.SettingsJobsCache.cachehits": "Találatok",
   "components.Settings.SettingsJobsCache.cacheflushed": "A {cachename} gyorsítótár kiürült.",
-  "components.Settings.SettingsJobsCache.cacheDescription": "Az Overseerr a külső API végpontokhoz intézett kéréseket gyorsítótárba helyezi a teljesítmény optimalizálása és a felesleges API-hívások elkerülése érdekében.",
+  "components.Settings.SettingsJobsCache.cacheDescription": "Az Animarr a külső API végpontokhoz intézett kéréseket gyorsítótárba helyezi a teljesítmény optimalizálása és a felesleges API-hívások elkerülése érdekében.",
   "components.Settings.SettingsJobsCache.cache": "Cache",
   "components.Settings.SettingsAbout.version": "Verzió",
   "components.Settings.SettingsAbout.uptodate": "Naprakész",
   "components.Settings.SettingsAbout.totalrequests": "Összes kérés",
   "components.Settings.SettingsAbout.totalmedia": "Teljes média",
   "components.Settings.SettingsAbout.timezone": "Időzóna",
-  "components.Settings.SettingsAbout.supportoverseerr": "Overseerr támogatása",
+  "components.Settings.SettingsAbout.supportanimarr": "Animarr támogatása",
   "components.Settings.SettingsAbout.preferredmethod": "Előnyben részesített",
-  "components.Settings.SettingsAbout.overseerrinformation": "Overseerr információk",
+  "components.Settings.SettingsAbout.animarrinformation": "Animarr információk",
   "components.Settings.SettingsAbout.outofdate": "Lejárt",
   "components.Settings.SettingsAbout.helppaycoffee": "Segíts egy kávé árával",
   "components.Settings.SettingsAbout.githubdiscussions": "GitHub Megbeszélések",
@@ -591,7 +591,7 @@
   "components.Settings.Notifications.botUsernameTip": "Lehetővé teszi a felhasználók számára, hogy csevegést indítsanak a botjával, és beállíthatják saját értesítéseiket",
   "components.Settings.Notifications.botUsername": "Bot felhasználónév",
   "components.Settings.Notifications.botAvatarUrl": "Bot Avatar URL-je",
-  "components.Settings.Notifications.botApiTip": "<CreateBotLink>Hozzon létre egy botot</CreateBotLink> az Overseerrrel való használathoz",
+  "components.Settings.Notifications.botApiTip": "<CreateBotLink>Hozzon létre egy botot</CreateBotLink> az Animarrel való használathoz",
   "components.Settings.Notifications.botAPI": "Bot engedélyezési token",
   "components.Settings.Notifications.authUser": "SMTP felhasználónév",
   "components.Settings.Notifications.authPass": "SMTP jelszó",
@@ -671,7 +671,7 @@
   "components.Settings.Notifications.NotificationsWebPush.toastWebPushTestSuccess": "Web push teszt értesítés elküldve!",
   "components.Settings.Notifications.NotificationsWebPush.toastWebPushTestSending": "Web push teszt értesítés küldése…",
   "components.Settings.Notifications.NotificationsWebPush.toastWebPushTestFailed": "A webes push tesztértesítés elküldése sikertelen volt.",
-  "components.Settings.Notifications.NotificationsWebPush.httpsRequirement": "A webes push-értesítések fogadásához az Overseerr-t HTTPS-en keresztül kell kiszolgálni.",
+  "components.Settings.Notifications.NotificationsWebPush.httpsRequirement": "A webes push-értesítések fogadásához az Animarr-t HTTPS-en keresztül kell kiszolgálni.",
   "components.Settings.Notifications.NotificationsWebPush.agentenabled": "Ügynök engedélyezése",
   "components.Settings.Notifications.NotificationsSlack.webhookUrlTip": "Hozzon létre egy <WebhookLink>Bejövő Webhook</WebhookLink> integrációt",
   "components.Settings.Notifications.NotificationsSlack.webhookUrl": "Webhook URL-je",
@@ -744,8 +744,8 @@
   "components.MovieDetails.showmore": "Mutass többet",
   "components.MovieDetails.showless": "Mutass kevesebbet",
   "components.MovieDetails.originaltitle": "Eredeti cím",
-  "components.Layout.VersionStatus.streamstable": "Overseerr stabil",
-  "components.Layout.VersionStatus.streamdevelop": "Overseerr Fejlesztő",
+  "components.Layout.VersionStatus.streamstable": "Animarr stabil",
+  "components.Layout.VersionStatus.streamdevelop": "Animarr Fejlesztő",
   "components.Layout.VersionStatus.outofdate": "Lejárt",
   "components.Layout.VersionStatus.commitsbehind": "{commitsBehind} {commitsBehind, plural, one {commit} other {commits}} mögött",
   "components.Layout.UserDropdown.settings": "Beállítások",
@@ -816,7 +816,7 @@
   "components.Settings.Notifications.NotificationsPushover.pushoversettingssaved": "Pushover értesítési beállítások sikeresen mentve!",
   "components.Settings.Notifications.NotificationsPushover.pushoversettingsfailed": "Pushover az értesítési beállításokat nem sikerült menteni.",
   "components.Settings.Notifications.NotificationsPushover.agentenabled": "\"Ügynök\" engedályezése",
-  "components.Settings.Notifications.NotificationsPushover.accessTokenTip": "<ApplicationRegistrationLink>Alkalmazás regisztrálása</ApplicationRegistrationLink> az Overseerr használatára",
+  "components.Settings.Notifications.NotificationsPushover.accessTokenTip": "<ApplicationRegistrationLink>Alkalmazás regisztrálása</ApplicationRegistrationLink> az Animarr használatára",
   "components.Settings.Notifications.NotificationsPushover.accessToken": "Alkalmazás API Token",
   "components.Settings.Notifications.NotificationsPushbullet.validationTypes": "Legalább egy értesítési típust ki kell választania",
   "components.Settings.Notifications.NotificationsPushbullet.validationAccessTokenRequired": "Meg kell adnia egy hozzáférési tokent (acces token)",
