--- a/src/i18n/locale/ja.json
+++ b/src/i18n/locale/ja.json
@@ -111,12 +111,12 @@
   "components.Settings.default4k": "デフォルト 4K",
   "components.Settings.deleteserverconfirm": "このサーバーを削除しますか?",
   "components.Settings.generalsettings": "一般設定",
-  "components.Settings.generalsettingsDescription": "Overseerr の構成に関する設定です。",
+  "components.Settings.generalsettingsDescription": "Animarr の構成に関する設定です。",
   "components.Settings.hostname": "ホスト名・IP アドレス",
   "components.Settings.librariesRemaining": "残りのライブラリー：{count}",
   "components.Settings.manualscan": "手動ライブラリースキャン",
-  "components.Settings.manualscanDescription": "通常は 24 時間に一度しか実行されません。Overseerr は、Plex サーバーの最近追加されたフォルダをより頻繁にチェックします。初めて Plex を設定する場合は、一度手動でライブラリーをスキャンすることをお勧めします。",
-  "components.Settings.menuAbout": "Overseerr について",
+  "components.Settings.manualscanDescription": "通常は 24 時間に一度しか実行されません。Animarr は、Plex サーバーの最近追加されたフォルダをより頻繁にチェックします。初めて Plex を設定する場合は、一度手動でライブラリーをスキャンすることをお勧めします。",
+  "components.Settings.menuAbout": "Animarr について",
   "components.Settings.menuGeneralSettings": "一般",
   "components.Settings.menuJobs": "ジョブ",
   "components.Settings.menuLogs": "ログ",
@@ -126,9 +126,9 @@
   "components.Settings.notificationsettings": "通知設定",
   "components.Settings.notrunning": "実行されていない",
   "components.Settings.plexlibraries": "Plex ライブラリー",
-  "components.Settings.plexlibrariesDescription": "Overseerr がスキャンしてタイトルを探すライブラリ。リストにない場合、Plex の接続設定を保存し、下のボタンをクリックしてください。",
+  "components.Settings.plexlibrariesDescription": "Animarr がスキャンしてタイトルを探すライブラリ。リストにない場合、Plex の接続設定を保存し、下のボタンをクリックしてください。",
   "components.Settings.plexsettings": "Plex の設定",
-  "components.Settings.plexsettingsDescription": "Plex サーバーの設定。Overseerr は、Plex サーバーを使用して、間隔をおいてライブラリをスキャンし、利用可能なコンテンツを確認します。",
+  "components.Settings.plexsettingsDescription": "Plex サーバーの設定。Animarr は、Plex サーバーを使用して、間隔をおいてライブラリをスキャンし、利用可能なコンテンツを確認します。",
   "components.Settings.port": "ポート",
   "components.Settings.radarrsettings": "Radarr 設定",
   "components.Settings.sonarrsettings": "Sonarr 設定",
@@ -141,7 +141,7 @@
   "components.Setup.finishing": "保存中…",
   "components.Setup.loginwithplex": "Plex でログイン",
   "components.Setup.signinMessage": "Plex アカウントでログインして始める",
-  "components.Setup.welcome": "Overseerr へようこそ",
+  "components.Setup.welcome": "Animarr へようこそ",
   "components.TvDetails.cast": "出演者",
   "components.TvDetails.originallanguage": "オリジナルの言語",
   "components.TvDetails.overview": "ストーリー",
@@ -177,7 +177,7 @@
   "components.Settings.SettingsAbout.version": "バージョン",
   "components.Settings.SettingsAbout.totalrequests": "総リクエスト数",
   "components.Settings.SettingsAbout.totalmedia": "総メディア数",
-  "components.Settings.SettingsAbout.overseerrinformation": "Overseerr 情報",
+  "components.Settings.SettingsAbout.animarrinformation": "Animarr 情報",
   "components.Settings.SettingsAbout.githubdiscussions": "GitHub ディスカッション",
   "components.Settings.SettingsAbout.gettingsupport": "サポート",
   "components.Settings.RadarrModal.validationNameRequired": "サーバー名を入力してください",
@@ -213,7 +213,7 @@
   "components.MovieDetails.studio": "制作会社",
   "i18n.close": "閉じる",
   "components.Settings.SettingsAbout.timezone": "タイムゾーン",
-  "components.Settings.SettingsAbout.supportoverseerr": "Overseerr を応援",
+  "components.Settings.SettingsAbout.supportanimarr": "Animarr を応援",
   "components.Settings.SettingsAbout.helppaycoffee": "開発者のコーヒーのためにチップを",
   "components.Settings.SettingsAbout.Releases.viewongithub": "GitHub で見る",
   "components.Settings.SettingsAbout.Releases.viewchangelog": "変更履歴参照",
@@ -259,7 +259,7 @@
   "components.UserProfile.UserSettings.UserGeneralSettings.toastSettingsFailure": "設定保存中に問題が発生しました。",
   "components.Login.validationemailrequired": "有効なメールアドレスを入力してください",
   "components.Login.signinwithplex": "Plex アカウントを使用する",
-  "components.Login.signinwithoverseerr": "{applicationTitle} アカウントを使用する",
+  "components.Login.signinwithanimarr": "{applicationTitle} アカウントを使用する",
   "components.Login.signinheader": "続けるにはログインしてください",
   "components.MediaSlider.ShowMoreCard.seemore": "もっと見る",
   "components.Login.validationpasswordrequired": "パスワードを入力してください",
@@ -446,8 +446,8 @@
   "components.PermissionEdit.managerequests": "リクエストを管理",
   "components.MovieDetails.markavailable": "視聴可能をマーク",
   "components.MovieDetails.mark4kavailable": "4K視聴可能をマーク",
-  "components.Layout.VersionStatus.streamstable": "Overseerr安定版",
-  "components.Layout.VersionStatus.streamdevelop": "Overseerr 開発版",
+  "components.Layout.VersionStatus.streamstable": "Animarr安定版",
+  "components.Layout.VersionStatus.streamdevelop": "Animarr 開発版",
   "components.Layout.VersionStatus.outofdate": "期限切れ",
   "components.PermissionEdit.autoapprove4kSeriesDescription": "4K シリーズのリクエストを自動的に承認する。",
   "components.PermissionEdit.autoapprove4kMoviesDescription": "4K映画のリクエストを自動的に承認する。",
