--- a/src/i18n/locale/nb_NO.json
+++ b/src/i18n/locale/nb_NO.json
@@ -103,7 +103,7 @@
   "components.Settings.address": "Adresse",
   "components.Settings.addsonarr": "Legg til Sonarr-tjener",
   "components.Settings.apikey": "API-nøkkel",
-  "components.Settings.applicationurl": "Nettsadresse for Overseerr",
+  "components.Settings.applicationurl": "Nettsadresse for Animarr",
   "components.Settings.cancelscan": "Avbryt skanning",
   "components.Settings.copied": "API-nøkkel kopiert til utklippstavle.",
   "components.Settings.currentlibrary": "Nåværende bibliotek: {name}",
@@ -111,11 +111,11 @@
   "components.Settings.default4k": "Standard 4K",
   "components.Settings.deleteserverconfirm": "Er du sikker på at du vil slette denne tjeneren?",
   "components.Settings.generalsettings": "Generelle innstilinger",
-  "components.Settings.generalsettingsDescription": "Konfigurer generelle innstillinger for Overseerr.",
+  "components.Settings.generalsettingsDescription": "Konfigurer generelle innstillinger for Animarr.",
   "components.Settings.hostname": "Vertsnavn eller IP-adresse",
   "components.Settings.librariesRemaining": "Bibliotek som gjenstår: {count}",
   "components.Settings.manualscan": "Manuell skanning av Biblioteket",
-  "components.Settings.manualscanDescription": "Normalt vil dette kjøres kun én gang i døgnet. Overseerr vil sjekke Plex oftere etter nylige tillagte titler. Hvis dette er din første gang du konfigurerer Plex vil en enkelt manuell biblioteksskanning anbefales!",
+  "components.Settings.manualscanDescription": "Normalt vil dette kjøres kun én gang i døgnet. Animarr vil sjekke Plex oftere etter nylige tillagte titler. Hvis dette er din første gang du konfigurerer Plex vil en enkelt manuell biblioteksskanning anbefales!",
   "components.Settings.menuAbout": "Om",
   "components.Settings.menuGeneralSettings": "Generelt",
   "components.Settings.menuJobs": "Oppgaver & Mellomlager",
@@ -126,9 +126,9 @@
   "components.Settings.notificationsettings": "Varsel-innstillinger",
   "components.Settings.notrunning": "Kjører ikke",
   "components.Settings.plexlibraries": "Plex-bibliotek",
-  "components.Settings.plexlibrariesDescription": "Bibliotekene Overseerr skanner for media. Sett opp og lagre dine Plex-tilkoblingsinnstillinger; klikk deretter på knappen under hvis ingen bibliotek vises.",
+  "components.Settings.plexlibrariesDescription": "Bibliotekene Animarr skanner for media. Sett opp og lagre dine Plex-tilkoblingsinnstillinger; klikk deretter på knappen under hvis ingen bibliotek vises.",
   "components.Settings.plexsettings": "Plex-innstillinger",
-  "components.Settings.plexsettingsDescription": "Sett opp innstillingene for din Plex-tjener. Overseerr vil skanne de valgte bibliotekene på din Plex-tjener med jevne mellomrom for å se hvilket innhold som er tilgjengelig.",
+  "components.Settings.plexsettingsDescription": "Sett opp innstillingene for din Plex-tjener. Animarr vil skanne de valgte bibliotekene på din Plex-tjener med jevne mellomrom for å se hvilket innhold som er tilgjengelig.",
   "components.Settings.port": "Port",
   "components.Settings.radarrsettings": "Radarr-innstillinger",
   "components.Settings.sonarrsettings": "Sonarr-innstillinger",
@@ -141,7 +141,7 @@
   "components.Setup.finishing": "Fullfører…",
   "components.Setup.loginwithplex": "Logg inn med Plex",
   "components.Setup.signinMessage": "Start med å logge inn på din Plex-konto",
-  "components.Setup.welcome": "Velkommen til Overseerr",
+  "components.Setup.welcome": "Velkommen til Animarr",
   "components.TvDetails.cast": "Roller",
   "components.TvDetails.originallanguage": "Originalspråk",
   "components.TvDetails.overview": "Oversikt",
@@ -343,7 +343,7 @@
   "components.Login.validationpasswordrequired": "Du må skrive et passord",
   "components.Login.validationemailrequired": "Du må bruke en gyldig E-postadresse",
   "components.Login.signinwithplex": "Bruk Plex-konto",
-  "components.Login.signinwithoverseerr": "Bruk {applicationTitle}-konto",
+  "components.Login.signinwithanimarr": "Bruk {applicationTitle}-konto",
   "components.Login.signinheader": "Logg inn for å fortsette",
   "components.Login.signingin": "Logger inn…",
   "components.Login.signin": "Logg inn",
@@ -376,7 +376,7 @@
   "components.Settings.originallanguageTip": "Filtrer innhold basert på originalspråk",
   "components.Settings.originallanguage": "Utforskelsesspråk",
   "components.Settings.SettingsLogs.showall": "Vis all logg",
-  "components.Settings.SettingsJobsCache.cacheDescription": "Overseerr mellomlagrer forespørsler til eksterne APIer for å optimalisere ytelsen samt unngå unødvendige API-kall.",
+  "components.Settings.SettingsJobsCache.cacheDescription": "Animarr mellomlagrer forespørsler til eksterne APIer for å optimalisere ytelsen samt unngå unødvendige API-kall.",
   "components.Settings.Notifications.allowselfsigned": "Godta selvsignerte sertifikater",
   "components.RequestModal.SearchByNameModal.notvdbiddescription": "Vi kunne ikke koble forespørselen din automatisk. Vennligst velg korrekt kobling fra listen under.",
   "components.RequestModal.QuotaDisplay.allowedRequestsUser": "Denne brukeren har tillatelse til å forespørre <strong>{limit}</strong> {type} hver <strong>{days}.</strong> dag.",
@@ -412,9 +412,9 @@
   "components.Settings.SettingsAbout.totalmedia": "Totalt antall tilgjengelig",
   "components.Settings.SettingsAbout.totalrequests": "Forespørsler totalt",
   "components.Settings.SettingsAbout.timezone": "Tidssone",
-  "components.Settings.SettingsAbout.supportoverseerr": "Støtt Overseerr",
+  "components.Settings.SettingsAbout.supportanimarr": "Støtt Animarr",
   "components.Settings.SettingsAbout.preferredmethod": "Foretrukket",
-  "components.Settings.SettingsAbout.overseerrinformation": "Om Overseerr",
+  "components.Settings.SettingsAbout.animarrinformation": "Om Animarr",
   "components.Settings.SettingsAbout.helppaycoffee": "Hjelp å betale for kaffe",
   "components.Settings.SettingsAbout.githubdiscussions": "Diskuter på GitHub",
   "components.Settings.SettingsAbout.gettingsupport": "Få hjelp",
@@ -460,7 +460,7 @@
   "components.RequestModal.QuotaDisplay.quotaLinkUser": "Du kan se en oppsummering av denne brukerens forespørselbegrensninger på <ProfileLink>profilsiden deres</ProfileLink>.",
   "components.RequestModal.QuotaDisplay.quotaLink": "Du kan se en oppsummering av dine forespørselbegrensninger på <ProfileLink>profilsiden</ProfileLink>.",
   "components.RequestModal.QuotaDisplay.notenoughseasonrequests": "Ikke nok gjenværende sesongforespørsler",
-  "components.Settings.csrfProtectionTip": "Sett ekstern API-tilgang til skrivebeskyttet modus (krever HTTPS og en omstart av Overseer for at endringen skal tre i kraft)",
+  "components.Settings.csrfProtectionTip": "Sett ekstern API-tilgang til skrivebeskyttet modus (krever HTTPS og en omstart av Animarr for at endringen skal tre i kraft)",
   "components.Settings.csrfProtectionHoverTip": "Ikke aktiver dette med mindre du vet hva du gjør!",
   "components.Settings.csrfProtection": "Aktiver CSRF-beskyttelse",
   "components.Settings.cacheImages": "Aktiver mellomlagring av bilder",
@@ -530,7 +530,7 @@
   "components.Settings.SettingsLogs.resumeLogs": "Fortsett",
   "components.Settings.SettingsLogs.pauseLogs": "Sett på pause",
   "components.Settings.SettingsLogs.message": "Rapport",
-  "components.Settings.SettingsLogs.logsDescription": "Du kan også se disse loggene direkte i <code>stdout</code>, eller i <code>{appDataPath}/logs/overseerr.log</code>.",
+  "components.Settings.SettingsLogs.logsDescription": "Du kan også se disse loggene direkte i <code>stdout</code>, eller i <code>{appDataPath}/logs/animarr.log</code>.",
   "components.Settings.SettingsLogs.logs": "Logger",
   "components.Settings.SettingsLogs.logDetails": "Logg-detaljer",
   "components.Settings.SettingsLogs.level": "Alvorlighetsgrad",
@@ -631,8 +631,8 @@
   "components.NotificationTypeSelector.notificationTypes": "Varselstyper",
   "components.MovieDetails.showmore": "Vis mer",
   "components.MovieDetails.showless": "Vis mindre",
-  "components.Layout.VersionStatus.streamstable": "Overseerr Stable",
-  "components.Layout.VersionStatus.streamdevelop": "Overseerr Develop",
+  "components.Layout.VersionStatus.streamstable": "Animarr Stable",
+  "components.Layout.VersionStatus.streamdevelop": "Animarr Develop",
   "components.Layout.VersionStatus.outofdate": "Utdatert",
   "components.Layout.VersionStatus.commitsbehind": "{commitsBehind} {commitsBehind, plural, one {commit} other {commits}} etter",
   "components.Layout.LanguagePicker.displaylanguage": "Visningsspråk",
@@ -727,7 +727,7 @@
   "components.NotificationTypeSelector.userissuecreatedDescription": "Bli varslet når andre brukere rapporterer avvik.",
   "components.PermissionEdit.createissuesDescription": "Gi tillatelse til å rapportere avvik.",
   "components.RequestModal.requestmovies4k": "Forespør {count} {count, plural, one {Film} other {Filmer}} i 4K",
-  "components.StatusChacker.reloadOverseerr": "Last på nytt",
+  "components.StatusChacker.reloadAnimarr": "Last på nytt",
   "components.UserList.email": "E-postadresse",
   "components.UserList.validationpasswordminchars": "Passordet er for kort; det må bestå av minimum 8 tegn",
   "i18n.status": "Status",
@@ -742,7 +742,7 @@
   "components.Settings.Notifications.NotificationsGotify.validationUrlRequired": "Du må oppgi en gyldig nettadresse",
   "components.Settings.Notifications.NotificationsGotify.validationUrlTrailingSlash": "Nettadressen kan ikke slutte med en skråstrek",
   "components.Settings.Notifications.NotificationsGotify.validationTypes": "Du må velge minst én varseltype",
-  "components.Settings.Notifications.NotificationsPushover.accessTokenTip": "<ApplicationRegistrationLink>Register en tjeneste</ApplicationRegistrationLink> til bruk sammen med Overseerr",
+  "components.Settings.Notifications.NotificationsPushover.accessTokenTip": "<ApplicationRegistrationLink>Register en tjeneste</ApplicationRegistrationLink> til bruk sammen med Animarr",
   "components.Settings.Notifications.NotificationsPushbullet.toastPushbulletTestFailed": "Pushbullet mislykkes med å sende test-varsel.",
   "components.Settings.Notifications.NotificationsPushbullet.toastPushbulletTestSending": "Pushbullet sender test-varsel…",
   "components.Settings.Notifications.NotificationsPushover.toastPushoverTestSuccess": "Test-varsel ble sendt med Pushover!",
@@ -846,7 +846,7 @@
   "components.IssueDetails.IssueComment.validationComment": "Du må skrive en melding",
   "components.IssueDetails.IssueComment.postedby": "Publisert {relativeTime} av {username}",
   "components.IssueList.issues": "Avvik",
-  "components.Settings.SettingsJobsCache.jobsDescription": "Overseerr kjører enkelte vedlikeholdsoppgaver med fast tidsintervall, men de kan også velges å kjøres manuelt under. En oppgave som blir trigget manuelt forstyrrer ikke det faste tidsintervalet.",
+  "components.Settings.SettingsJobsCache.jobsDescription": "Animarr kjører enkelte vedlikeholdsoppgaver med fast tidsintervall, men de kan også velges å kjøres manuelt under. En oppgave som blir trigget manuelt forstyrrer ikke det faste tidsintervalet.",
   "components.UserProfile.UserSettings.menuPermissions": "Tillatelser",
   "components.IssueDetails.IssueDescription.description": "Beskrivelse",
   "components.IssueDetails.allseasons": "Alle Sesonger",
@@ -879,14 +879,14 @@
   "components.TvDetails.productioncountries": "Produksjonsland",
   "components.TvDetails.seasons": "{seasonCount, plural, one {# Sesong} other {# Sesonger}}",
   "components.TvDetails.originaltitle": "Originaltittel",
-  "components.StatusChacker.newversionDescription": "Overseerr har blitt oppdatert! Vennligst trykk på knappen under for å laste siden på nytt.",
+  "components.StatusChacker.newversionDescription": "Animarr har blitt oppdatert! Vennligst trykk på knappen under for å laste siden på nytt.",
   "components.TvDetails.anime": "Animasjon",
   "components.TvDetails.play4konplex": "Spill av i 4K med Plex",
   "components.UserList.localuser": "Lokal bruker",
   "components.UserList.password": "Passord",
   "components.UserList.nouserstoimport": "Det er ingen brukere å importere fra Plex.",
   "components.UserList.userdeleteerror": "Noe gikk galt under sletting av brukeren.",
-  "components.UserList.passwordinfodescription": "Sett opp en nettadresse for Overseerr og aktiver E-postvarsler for å kunne sende ut automatiske genererte passord.",
+  "components.UserList.passwordinfodescription": "Sett opp en nettadresse for Animarr og aktiver E-postvarsler for å kunne sende ut automatiske genererte passord.",
   "components.UserList.usercreatedfailedexisting": "Denne E-postadressen er allerede i bruk av en annen bruker.",
   "components.UserProfile.UserSettings.UserNotificationSettings.discordsettingsfailed": "Kunne ikke lagre instillingene for Discord.",
   "components.UserProfile.UserSettings.UserNotificationSettings.email": "E-post",
@@ -969,7 +969,7 @@
   "components.Settings.Notifications.NotificationsWebPush.toastWebPushTestSuccess": "Test-varsel ble sendt med Web Push!",
   "components.Settings.Notifications.NotificationsWebPush.webpushsettingsfailed": "Kunne ikke lagre instillingene for Web Push.",
   "components.Settings.Notifications.webhookUrlTip": "Lag en <DiscordWebhookLink>webhook integasjon</DiscordWebhookLink> med din tjener",
-  "components.Settings.Notifications.botApiTip": "<CreateBotLink>Lag en bot</CreateBotLink> til bruk sammen med Overseerr",
+  "components.Settings.Notifications.botApiTip": "<CreateBotLink>Lag en bot</CreateBotLink> til bruk sammen med Animarr",
   "components.Settings.Notifications.NotificationsSlack.toastSlackTestSuccess": "Test-varsel ble sendt med Slack!",
   "components.UserProfile.UserSettings.UserNotificationSettings.pgpPublicKeyTip": "Bruk <OpenPgpLink>OpenPGP</OpenPgpLink> til å kryptere E-post",
   "components.Settings.Notifications.NotificationsWebhook.toastWebhookTestFailed": "Webhook mislykkes med å sende test-varsel.",
@@ -979,7 +979,7 @@
   "components.Settings.Notifications.NotificationsPushover.validationUserTokenRequired": "Du må oppgi en gyldig bruker- eller gruppe nøkkel",
   "components.Settings.webAppUrlTip": "Alternativt send brukerne direkte til Web-Tjenesten på din tjener istedenfor Plex sin Web-tjener",
   "components.Settings.webhook": "Webhook",
-  "components.Settings.Notifications.NotificationsWebPush.httpsRequirement": "For å kunne sende Web Push varsler, må Overseerr kommunisere over HTTPS.",
+  "components.Settings.Notifications.NotificationsWebPush.httpsRequirement": "For å kunne sende Web Push varsler, må Animarr kommunisere over HTTPS.",
   "components.Settings.Notifications.toastTelegramTestSuccess": "Test-varsel ble sendt med Telegram!",
   "components.Setup.scanbackground": "Skanning av biblioteket vil forsette i bakgrunnen. Du kan i mellomtiden gjøre ferdig resten av oppsettet og installasjonen.",
   "components.Settings.Notifications.toastEmailTestFailed": "Mislykkes å sende test-varsel med E-post.",
@@ -995,7 +995,7 @@
   "components.Settings.Notifications.NotificationsWebhook.resetPayloadSuccess": "JSON payload tilbakestilt!",
   "components.Settings.Notifications.NotificationsPushover.userTokenTip": "Din 30-tegns <UsersGroupsLink>bruker- eller gruppe-nøkkel</UsersGroupsLink>",
   "components.Settings.SettingsJobsCache.cachevsize": "Verdistørrelse",
-  "components.Settings.trustProxyTip": "Tillatt Overseerr å registrere klienters IP addresser korrekt bak en proxy (Overseerr må startes på nytt før endringene trer i kraft)",
+  "components.Settings.trustProxyTip": "Tillatt Animarr å registrere klienters IP addresser korrekt bak en proxy (Animarr må startes på nytt før endringene trer i kraft)",
   "components.Settings.serviceSettingsDescription": "Konfigurer dine {serverType}tjener(e) nedenfor. Du kan koble til flere forskellige {serverType}tjenere men kun to av dem kan markeres som standard (en som ikke er 4K og en 4K). Administratorer kan endre hvilken tjener som brukes før godkjennelse av nye forespørsler.",
   "components.ManageSlideOver.manageModalClearMediaWarning": "* Dette vil slette all data for denne tittelen uten mulighet for å bli gjennopprettet, det inkluderer alle forespørsler, avvik osv. Hvis denne tittelen finnes i ditt Plex bibliotek vil medieinformasjon bli opprettet på nytt under neste skanning.",
   "components.Settings.Notifications.NotificationsWebhook.authheader": "Autorisasjonshode",
@@ -1009,7 +1009,7 @@
   "components.Settings.Notifications.botUsernameTip": "Tillat brukere å kunne starte en prat med din \"Bot\" for å konfigurere deres egne varsler",
   "components.UserList.newplexsigninenabled": "Innstillingen <strong>Aktiver ny Plex-pålogging</strong> er nå aktivert. Plex-brukere med tilgang til biblioteket trenger ikke å importeres for å kunne logge på første gang.",
   "components.Settings.Notifications.enableMentions": "Aktiver \"Mentions\"",
-  "components.Settings.SettingsAbout.runningDevelop": "Du bruker nå <code>develop</code> utgaven av Overseerr. Denne er kun anbefalt for dem som bidrar i utviklingen eller assisterer med testing av nye funksjoner.",
+  "components.Settings.SettingsAbout.runningDevelop": "Du bruker nå <code>develop</code> utgaven av Animarr. Denne er kun anbefalt for dem som bidrar i utviklingen eller assisterer med testing av nye funksjoner.",
   "components.UserProfile.UserSettings.UserNotificationSettings.pushoverUserKeyTip": "Din 30-tegns <UsersGroupsLink>bruker- eller gruppe-ID</UsersGroupsLink>",
   "components.UserProfile.UserSettings.UserPasswordChange.noPasswordSet": "Denne brukerkontoen har for øyeblikket ikke et passord. Konfigurer et passord nedenfor så denne kontoen kan logge inn som en \"lokal bruker.\"",
   "components.UserProfile.UserSettings.UserNotificationSettings.telegramChatIdTipLong": "<TelegramBotLink>Start en prat</TelegramBotLink>, legg til <GetIdBotLink>@get_id_bot</GetIdBotLink> og benytt <code>/my_id</code> kommandoen",
@@ -1036,7 +1036,7 @@
   "components.ManageSlideOver.plays": "<strong>{playCount, number}</strong> {playCount, plural, one {avspilling} other {avspillinger}}",
   "components.ManageSlideOver.alltime": "Totalt",
   "components.Settings.Notifications.NotificationsPushbullet.channelTag": "Kanal-merke",
-  "components.Settings.tautulliSettingsDescription": "Overseerr kan hente avspillingshistorikk for Plex fra Tautulli. Fyll inn innstilingene under for å etablere kommunikasjon med din Tautulli-tjener.",
+  "components.Settings.tautulliSettingsDescription": "Animarr kan hente avspillingshistorikk for Plex fra Tautulli. Fyll inn innstilingene under for å etablere kommunikasjon med din Tautulli-tjener.",
   "components.UserProfile.UserSettings.UserGeneralSettings.discordId": "Discord Bruker ID",
   "components.UserProfile.UserSettings.UserGeneralSettings.validationDiscordId": "Du må oppgi en gyldig Bruker ID for Discord",
   "components.UserProfile.UserSettings.UserGeneralSettings.discordIdTip": "<FindDiscordIdLink>ID-nummeret</FindDiscordIdLink> til din brukerkonto",
