--- a/src/i18n/locale/sr.json
+++ b/src/i18n/locale/sr.json
@@ -38,7 +38,7 @@
   "components.TvDetails.cast": "Uloge",
   "components.TvDetails.anime": "Anime",
   "components.TvDetails.TvCast.fullseriescast": "Glumci cele serije",
-  "components.Setup.welcome": "Dobrodošli u Overseerr",
+  "components.Setup.welcome": "Dobrodošli u Animarr",
   "components.Setup.tip": "Savet",
   "components.Setup.signinMessage": "Započni tako što ćete se prijaviti sa svojim Plex nalogom",
   "components.Setup.loginwithplex": "Prijavite se sa Plex-om",
@@ -58,9 +58,9 @@
   "components.Settings.sonarrsettings": "Sonarr podešavanja",
   "components.Settings.radarrsettings": "Radarr podešavanja",
   "components.Settings.port": "Port",
-  "components.Settings.plexsettingsDescription": "Konfigurišite podešavanja za Vaš Plex server. Overseerr skenira vaše Plex biblioteke da utvrdi šta je dostupno od sadržaja.",
+  "components.Settings.plexsettingsDescription": "Konfigurišite podešavanja za Vaš Plex server. Animarr skenira vaše Plex biblioteke da utvrdi šta je dostupno od sadržaja.",
   "components.Settings.plexsettings": "Plex podešavanja",
-  "components.Settings.plexlibrariesDescription": "Overseerr skenira sadržaj za imena. Podesite informacije o Plex konekciji, a zatim kliknite dugme ispod ako nije navedena nijedna biblioteka.",
+  "components.Settings.plexlibrariesDescription": "Animarr skenira sadržaj za imena. Podesite informacije o Plex konekciji, a zatim kliknite dugme ispod ako nije navedena nijedna biblioteka.",
   "components.Settings.plexlibraries": "Plex biblioteke",
   "components.Settings.notificationsettings": "Podešavanje notifikacija",
   "components.Settings.menuServices": "Servisi",
@@ -70,11 +70,11 @@
   "components.Settings.menuJobs": "Poslovi & Keš",
   "components.Settings.menuGeneralSettings": "Opšta",
   "components.Settings.menuAbout": "O nama",
-  "components.Settings.manualscanDescription": "Normalno, ovo će biti pokrenutno na svakih 24 sata. Overseerr će proveriti nedavno dodati Plex sadržaj češće. Ako je ovo prvi put da se Plex konfiguriše, jedan ručni scan sadržaja je preporučen!",
+  "components.Settings.manualscanDescription": "Normalno, ovo će biti pokrenutno na svakih 24 sata. Animarr će proveriti nedavno dodati Plex sadržaj češće. Ako je ovo prvi put da se Plex konfiguriše, jedan ručni scan sadržaja je preporučen!",
   "components.Settings.manualscan": "Ručno skeniranje sadržaja",
   "components.Settings.librariesRemaining": "Broj sadržaja koji se obradjuje: {count}",
   "components.Settings.hostname": "Hostname ili IP adresa",
-  "components.Settings.generalsettingsDescription": "Ovo su podešavanja vezana za uobičajenu Overseerr konfiguraciju.",
+  "components.Settings.generalsettingsDescription": "Ovo su podešavanja vezana za uobičajenu Animarr konfiguraciju.",
   "components.Settings.generalsettings": "Standarna podešavanja",
   "components.Settings.deleteserverconfirm": "Da li ste sigurni da želite da izbrišete ovaj server?",
   "components.Settings.default4k": "Podrazumevano 4K",
@@ -119,7 +119,7 @@
   "components.Settings.SettingsAbout.version": "Verzija",
   "components.Settings.SettingsAbout.totalrequests": "Ukupno zahteva",
   "components.Settings.SettingsAbout.totalmedia": "Ukupno medija",
-  "components.Settings.SettingsAbout.overseerrinformation": "O Overseerr",
+  "components.Settings.SettingsAbout.animarrinformation": "O Animarr",
   "components.Settings.SettingsAbout.githubdiscussions": "GitHub rasprave",
   "components.Settings.SettingsAbout.gettingsupport": "Pomoć",
   "components.Settings.RadarrModal.validationRootFolderRequired": "Morate odabrati root folder",
@@ -219,7 +219,7 @@
   "components.Discover.discover": "Pronađi novo",
   "components.MovieDetails.showless": "Prikaži manje",
   "components.Settings.SettingsLogs.logs": "Logovi",
-  "components.StatusChacker.reloadOverseerr": "Osveži",
+  "components.StatusChacker.reloadAnimarr": "Osveži",
   "components.MovieDetails.watchtrailer": "Pogledaj najavu",
   "components.UserProfile.UserSettings.UserNotificationSettings.notifications": "Notifikacije",
   "components.UserList.create": "Kreiraj",
@@ -445,7 +445,7 @@
   "components.IssueDetails.leavecomment": "Komentar",
   "components.PlexLoginButton.signinwithplex": "Prijavite se",
   "components.PermissionEdit.users": "Upravljajte korisnica",
-  "components.Settings.SettingsAbout.supportoverseerr": "Pomoć Overseerr",
+  "components.Settings.SettingsAbout.supportanimarr": "Pomoć Animarr",
   "components.TvDetails.watchtrailer": "Pogledaj najavu",
   "components.CollectionDetails.requestcollection": "Zahtevaj kolekciju",
   "components.StatusBadge.status4k": "4K {status}",
