--- a/src/i18n/locale/sv.json
+++ b/src/i18n/locale/sv.json
@@ -15,9 +15,9 @@
   "components.Settings.sonarrsettings": "Sonarrinställningar",
   "components.Settings.radarrsettings": "Radarrinställningar",
   "components.Settings.port": "Port",
-  "components.Settings.plexsettingsDescription": "Konfigurera inställningarna för din Plex-server. Overseerr scannar din Plex-server för att avgöra om innehållet är tillgängligt.",
+  "components.Settings.plexsettingsDescription": "Konfigurera inställningarna för din Plex-server. Animarr scannar din Plex-server för att avgöra om innehållet är tillgängligt.",
   "components.Settings.plexsettings": "Plexinställningar",
-  "components.Settings.plexlibrariesDescription": "Mediabiblioteken som Overseerr scannar för titlar. Konfigurera och spara dina Plex anslutningsinställningar och klicka sedan på knappen nedan utfall inga är listade.",
+  "components.Settings.plexlibrariesDescription": "Mediabiblioteken som Animarr scannar för titlar. Konfigurera och spara dina Plex anslutningsinställningar och klicka sedan på knappen nedan utfall inga är listade.",
   "components.Settings.plexlibraries": "Plex Bibliotek",
   "components.Settings.notrunning": "Körs ej",
   "components.Settings.notificationsettings": "Notifikationsinställningar",
@@ -28,11 +28,11 @@
   "components.Settings.menuJobs": "Jobb & Cache",
   "components.Settings.menuGeneralSettings": "Allmänna",
   "components.Settings.menuAbout": "Om",
-  "components.Settings.manualscanDescription": "Normalt körs denna var tjugofjärde timme. Overseerr kommer kontrollera till Plex Servers \"senast tillagda\" oftare. Om detta är första gången du konfigurerar din Plex Server är det starkt rekommenderat att göra en manuell full scan av ditt mediabibliotek!",
+  "components.Settings.manualscanDescription": "Normalt körs denna var tjugofjärde timme. Animarr kommer kontrollera till Plex Servers \"senast tillagda\" oftare. Om detta är första gången du konfigurerar din Plex Server är det starkt rekommenderat att göra en manuell full scan av ditt mediabibliotek!",
   "components.Settings.manualscan": "Manuell Biblioteksscan",
   "components.Settings.librariesRemaining": "Kvarvarande Bibliotek: {count}",
   "components.Settings.hostname": "Värdnamn eller IP-adress",
-  "components.Settings.generalsettingsDescription": "Konfigurera global- och standardinställningar för Overseerr.",
+  "components.Settings.generalsettingsDescription": "Konfigurera global- och standardinställningar för Animarr.",
   "components.Settings.generalsettings": "Generella Inställningar",
   "components.Settings.deleteserverconfirm": "Är du säker på att du vill radera servern?",
   "components.Settings.default4k": "Standard 4K",
@@ -77,7 +77,7 @@
   "components.Settings.SettingsAbout.version": "Version",
   "components.Settings.SettingsAbout.totalrequests": "Totalt antal förfrågningar",
   "components.Settings.SettingsAbout.totalmedia": "Totalt antal mediaobjekt",
-  "components.Settings.SettingsAbout.overseerrinformation": "Om Overseerr",
+  "components.Settings.SettingsAbout.animarrinformation": "Om Animarr",
   "components.Settings.SettingsAbout.githubdiscussions": "GitHub Diskussioner",
   "components.Settings.SettingsAbout.gettingsupport": "Få Support",
   "components.Settings.RadarrModal.validationRootFolderRequired": "Du måste ange en root-mapp",
@@ -171,7 +171,7 @@
   "components.Discover.discovermovies": "Populära filmer",
   "components.TvDetails.anime": "Anime",
   "components.TvDetails.TvCast.fullseriescast": "Rollista",
-  "components.Setup.welcome": "Välkommen till Overseerr",
+  "components.Setup.welcome": "Välkommen till Animarr",
   "components.Setup.tip": "Tips",
   "components.Setup.signinMessage": "Kom igång genom att logga in med ditt Plex-konto",
   "components.RequestModal.requestseasons": "Förfrågan {seasonCount} {seasonCount, plural, one {Season} other {Seasons}}",
@@ -213,7 +213,7 @@
   "i18n.close": "Stäng",
   "components.Setup.loginwithplex": "Logga in med Plex",
   "components.Settings.SettingsAbout.timezone": "Tidszon",
-  "components.Settings.SettingsAbout.supportoverseerr": "Hjälp Overseerr",
+  "components.Settings.SettingsAbout.supportanimarr": "Hjälp Animarr",
   "components.Settings.SettingsAbout.helppaycoffee": "Stötta med en kopp kaffe",
   "components.Settings.SettingsAbout.Releases.viewongithub": "Visa på GitHub",
   "components.Settings.SettingsAbout.Releases.viewchangelog": "Visa ändringslogg",
@@ -242,9 +242,9 @@
   "components.TvDetails.viewfullcrew": "Visa hela rollistan",
   "components.TvDetails.firstAirDate": "Första sändningsdatum",
   "components.TvDetails.TvCrew.fullseriescrew": "Hela rollistan",
-  "components.StatusChacker.reloadOverseerr": "Ladda om",
+  "components.StatusChacker.reloadAnimarr": "Ladda om",
   "components.StatusChacker.newversionavailable": "Applikationsuppdatering",
-  "components.StatusChacker.newversionDescription": "Overseerr har uppdateras! Klicka på knappen nedan för att ladda om sidan.",
+  "components.StatusChacker.newversionDescription": "Animarr har uppdateras! Klicka på knappen nedan för att ladda om sidan.",
   "components.StatusBadge.status4k": "4K {status}",
   "components.Settings.SettingsAbout.documentation": "Dokumentation",
   "components.Settings.Notifications.validationChatIdRequired": "Du måste ange ett giltigt chatt-ID",
@@ -370,7 +370,7 @@
   "components.MovieDetails.mark4kavailable": "Markera som tillgänglig i 4K",
   "components.Login.validationpasswordrequired": "Du måste ange ett lösenord",
   "components.Login.signinwithplex": "Använd ditt Plex-konto",
-  "components.Login.signinwithoverseerr": "Använd ditt {applicationTitle}-konto",
+  "components.Login.signinwithanimarr": "Använd ditt {applicationTitle}-konto",
   "components.Login.signinheader": "Logga in för att fortsätta",
   "components.Login.signingin": "Loggar in…",
   "components.Login.signin": "Logga in",
@@ -422,7 +422,7 @@
   "components.Settings.SettingsJobsCache.nextexecution": "Nästa Körning",
   "components.Settings.SettingsJobsCache.jobtype": "Typ",
   "components.Settings.SettingsJobsCache.jobstarted": "{jobname} startad.",
-  "components.Settings.SettingsJobsCache.jobsDescription": "Overseerr utför vissa av underhållsuppgifter regelbundet, men de kan också startas manuellt nedanför. Manuellt körda jobb ändrar inte på dess schedulering.",
+  "components.Settings.SettingsJobsCache.jobsDescription": "Animarr utför vissa av underhållsuppgifter regelbundet, men de kan också startas manuellt nedanför. Manuellt körda jobb ändrar inte på dess schedulering.",
   "components.Settings.SettingsJobsCache.jobs": "Jobb",
   "components.Settings.SettingsJobsCache.jobname": "Jobbnamn",
   "components.Settings.SettingsJobsCache.jobcancelled": "{jobname} avbruten.",
@@ -435,9 +435,9 @@
   "components.Settings.SettingsJobsCache.cachekeys": "Totalt antal nycklar",
   "components.Settings.SettingsJobsCache.cachehits": "Träffar",
   "components.Settings.SettingsJobsCache.cacheflushed": "{cachename} cache rensad.",
-  "components.Settings.SettingsJobsCache.cacheDescription": "Overseerr cachear förfrågningar till externa API-endpoints för att optimera prestanda och att undvika onödiga api-kall.",
+  "components.Settings.SettingsJobsCache.cacheDescription": "Animarr cachear förfrågningar till externa API-endpoints för att optimera prestanda och att undvika onödiga api-kall.",
   "components.Settings.SettingsJobsCache.cache": "Cache",
-  "components.Settings.trustProxyTip": "Tillåt Overseerr att korrekt registrera klienters IP-adresser bakom en proxy (Overseerr måste laddas om för att ändringarna skall gå i kraft)",
+  "components.Settings.trustProxyTip": "Tillåt Animarr att korrekt registrera klienters IP-adresser bakom en proxy (Animarr måste laddas om för att ändringarna skall gå i kraft)",
   "components.Settings.trustProxy": "Aktivera Proxy-stöd",
   "components.TvDetails.playonplex": "Spela upp på Plex",
   "components.TvDetails.play4konplex": "Spela upp i 4K på Plex",
@@ -460,7 +460,7 @@
   "components.Settings.serverpreset": "Server",
   "components.Settings.serverRemote": "fjärr",
   "components.Settings.serverLocal": "lokal",
-  "components.Settings.csrfProtectionTip": "Ställ in extern API-åtkomst till skrivskyddad (kräver HTTPS och Overseerr måste laddas om för att ändringar ska träda i kraft)",
+  "components.Settings.csrfProtectionTip": "Ställ in extern API-åtkomst till skrivskyddad (kräver HTTPS och Animarr måste laddas om för att ändringar ska träda i kraft)",
   "i18n.loading": "Laddar…",
   "components.UserProfile.recentrequests": "Senaste förfrågningar",
   "components.UserProfile.UserSettings.menuPermissions": "Behörigheter",
@@ -622,7 +622,7 @@
   "components.Settings.SettingsLogs.resumeLogs": "Återuppta",
   "components.Settings.SettingsLogs.pauseLogs": "Paus",
   "components.Settings.SettingsLogs.message": "Meddelande",
-  "components.Settings.SettingsLogs.logsDescription": "Du kan också läsa loggar direkt via <code>stdout</code> eller i <code>{appDataPath}/logs/overseerr.log</code>.",
+  "components.Settings.SettingsLogs.logsDescription": "Du kan också läsa loggar direkt via <code>stdout</code> eller i <code>{appDataPath}/logs/animarr.log</code>.",
   "components.Settings.SettingsLogs.label": "Etikett",
   "components.Settings.SettingsLogs.logs": "Loggar",
   "components.Settings.SettingsLogs.level": "Allvarlighetsgrad",
@@ -735,8 +735,8 @@
   "components.RequestList.RequestItem.cancelRequest": "Avbryt begäran",
   "components.NotificationTypeSelector.notificationTypes": "Notifikationstyper",
   "components.Discover.noRequests": "Inga förfrågningar.",
-  "components.Layout.VersionStatus.streamstable": "Overseerr Stabil",
-  "components.Layout.VersionStatus.streamdevelop": "Overseerr Utveckling",
+  "components.Layout.VersionStatus.streamstable": "Animarr Stabil",
+  "components.Layout.VersionStatus.streamdevelop": "Animarr Utveckling",
   "components.Layout.VersionStatus.outofdate": "Föråldrad",
   "components.Layout.VersionStatus.commitsbehind": "{commitsBehind} {commitsBehind, plural, one {ändring} other {ändringar}} efter",
   "components.UserProfile.UserSettings.UserPasswordChange.noPasswordSetOwnAccount": "Ditt konto har för närvarande inget lösenord. Konfigurera ett lösenord nedan för att aktivera inloggning som en \"lokal användare\" med din e-postadress.",
@@ -816,17 +816,17 @@
   "components.Settings.Notifications.encryptionDefault": "Använd STARTTLS om tillgängligt",
   "components.Settings.Notifications.encryption": "Krypteringsmetod",
   "components.Settings.Notifications.chatIdTip": "Starta en chatt med din bot, lägg till <GetIdBotLink>@get_id_bot</GetIdBotLink> och ge kommandot <code>/my_id</code>",
-  "components.Settings.Notifications.botApiTip": "<CreateBotLink>Skapa en bot</CreateBotLink> för användning med Overseerr",
+  "components.Settings.Notifications.botApiTip": "<CreateBotLink>Skapa en bot</CreateBotLink> för användning med Animarr",
   "components.Settings.Notifications.NotificationsSlack.webhookUrlTip": "Skapa en <WebhookLink>Inkommande Webhook</WebhookLink> integration",
   "components.Settings.Notifications.NotificationsPushover.userTokenTip": "Din 30-tecken <UsersGroupsLink>användare eller gruppidentifierare</UsersGroupsLink>",
-  "components.Settings.Notifications.NotificationsPushover.accessTokenTip": "<ApplicationRegistrationLink>Registrera en applikation</ApplicationRegistrationLink> för användning med Overseerr",
+  "components.Settings.Notifications.NotificationsPushover.accessTokenTip": "<ApplicationRegistrationLink>Registrera en applikation</ApplicationRegistrationLink> för användning med Animarr",
   "components.Settings.Notifications.NotificationsPushbullet.accessTokenTip": "Skapa en token från dina <PushbulletSettingsLink>kontoinställningar</PushbulletSettingsLink>",
   "components.Settings.Notifications.NotificationsLunaSea.webhookUrlTip": "Din användar- eller enhetsbaserade <LunaSeaLink>webbhook-URL för avisering</LunaSeaLink>",
   "components.DownloadBlock.estimatedtime": "Beräknad {time}",
   "components.Settings.webAppUrlTip": "Alternativt dirigera användare till webbappen på din server istället för den \"värd\" webbappen",
   "components.Settings.webAppUrl": "<WebAppLink>Webbapp</WebAppLink> URL",
   "components.UserList.localLoginDisabled": "Inställningen <strong>Aktivera lokal inloggning</strong> är för närvarande inaktiverad.",
-  "components.Settings.Notifications.NotificationsWebPush.httpsRequirement": "För att kunna ta emot push-notiser måste Overseerr serveras via HTTPS.",
+  "components.Settings.Notifications.NotificationsWebPush.httpsRequirement": "För att kunna ta emot push-notiser måste Animarr serveras via HTTPS.",
   "components.UserList.displayName": "Visningsnamn",
   "components.RequestList.RequestItem.requesteddate": "Begärd",
   "components.RequestCard.failedretry": "Något gick fel vid nytt försök av begäran.",
@@ -861,7 +861,7 @@
   "components.Settings.SettingsJobsCache.editJobScheduleSelectorMinutes": "varje{jobScheduleMinutes, plural, one {minut} other {{jobScheduleMinutes} minuter}}",
   "components.Settings.SettingsJobsCache.jobScheduleEditFailed": "Något gick fel vid sparning av jobbet.",
   "components.Settings.SettingsJobsCache.jobScheduleEditSaved": "Jobbet har redigerats!",
-  "components.Settings.SettingsAbout.runningDevelop": "Du använder <code>develop</code> grenen av Overseerr, som endast rekommenderas för dem som bidrar till utvecklingen eller hjälper till med tester i den absoluta framkanten.",
+  "components.Settings.SettingsAbout.runningDevelop": "Du använder <code>develop</code> grenen av Animarr, som endast rekommenderas för dem som bidrar till utvecklingen eller hjälper till med tester i den absoluta framkanten.",
   "components.StatusBadge.status": "{status}",
   "components.IssueDetails.IssueComment.areyousuredelete": "Är du säker på att du vill ta bort denna kommentar?",
   "components.IssueDetails.IssueComment.delete": "Ta bort kommentar",
@@ -1033,7 +1033,7 @@
   "components.Settings.validationUrl": "Du måste ange en giltig URL",
   "components.Settings.externalUrl": "Extern URL",
   "components.Settings.tautulliApiKey": "API-nyckel",
-  "components.Settings.tautulliSettingsDescription": "Alternativt kan du konfigurera inställningarna för din Tautulli-server. Overseerr hämtar visningshistorikdata för din Plex-media från Tautulli.",
+  "components.Settings.tautulliSettingsDescription": "Alternativt kan du konfigurera inställningarna för din Tautulli-server. Animarr hämtar visningshistorikdata för din Plex-media från Tautulli.",
   "components.UserProfile.recentlywatched": "Nyligen sett",
   "components.Settings.validationUrlBaseTrailingSlash": "URL-basen får inte sluta med ett snedstreck",
   "components.Settings.validationUrlTrailingSlash": "URL får inte sluta med ett snedstreck",
